k8s_ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: <CLUSTER-ISSUER>  # Replace with your cluster issuer
spec:
  tls:
    - hosts:
      - <HOST-NAME>  # Replace with your hostname
      secretName: k8s-dev-dashboard-tls
  rules:
    - host: <HOST-NAME>  # Replace with your hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
